wled00/data/index.css
/* ... */
.radio .radiomark:after {
	width: 14px;
	height: 14px;
	top: 50%;
	left: 50%;
	margin: -7px;
	border-radius: 50%;
	background: var(--c-f);
}

TD .checkmark, TD .radiomark {
	top: -6px;
}

.h {
	font-size: 13px;
	text-align: center;
	color: var(--c-b);
}

.bp {
	margin-bottom: 8px;
}

/* segment & preset wrapper */
.seg, .pres {
	background-color: var(--c-2);
	/*color: var(--c-f);*/ /* seems to affect only the Add segment button, which should be same color as reset segments */
	border: 0 solid var(--c-f);
	text-align: left;
	transition: background-color .5s;
	border-radius: 21px;
}

.seg {
	top: auto !important;	/* prevent sticky */
	bottom: auto !important;
}
/* checkmark labels */
.seg .schkl {
	position: absolute;
	top: 7px;
	left: 9px;
}
/* checkmark labels */
.filter .fchkl, .option .ochkl {
	display: inline-block;
	min-width: .7em;
	padding: 1px 4px 1px 32px;
	text-align: left;
	line-height: 24px;
	vertical-align: middle;
	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
	filter: grayscale(100%);
}
.filter .fchkl {
	margin: 0 4px;
	min-width: 20px;
	pointer-events: auto;
}

.lbl-l {
	font-size: 13px;
	text-align: center;
	padding: 4px 0;
}

.lbl-s {
	display: inline-block;
	margin-top: 6px;
	font-size: 13px;
	width: 48%;
	text-align: center;
}

/* list wrapper */
.list {
	position: relative;
	transition: background-color .5s;
	margin: auto auto 10px;
	line-height: 24px;
}

/* list item */
.lstI {
	align-items: center;
	cursor: pointer;
	background-color: var(--c-2);
	overflow: hidden;
	position: -webkit-sticky;
	position: sticky;
	border-radius: 21px;
	margin: 13px auto 0;
	min-height: 40px;
	border: 1px solid var(--c-2);
}

#segutil .lstI {
	margin-top: 0;
}

/* Simplify segments */
.simplified #segcont .lstI {
	margin-top: 4px;
	min-height: unset;
}

/* selected item/element */
.selected { /* has to be after .lstI since !important is not ok */
	background: var(--c-4);
}

#segcont .seg:hover:not([class*="expanded"]),
.lstI:hover:not([class*="expanded"]) {
	background: var(--c-5);
}

.selected .checkmark,
.selected .radiomark,
.selected input[type=number],
.selected input[type=text] {
	background-color: var(--c-3);
}

/* selected list item */
.lstI.selected {
	top: 0;
	bottom: 0;
	border: 1px solid var(--c-4);
}

.lstI.sticky,
.lstI.selected {
	z-index: 1;
	box-shadow: 0 0 10px 4px var(--c-1);
}

#pcont .selected:not([class*="expanded"]) {
	bottom: 52px;
	top: 42px;
}

#fxlist .lstI.selected,
#pallist .lstI.selected {
	top: calc(var(--sti) + 42px);
}

.dialog:not(.hide)::before {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: var(--c-o);
	content: " ";
}
.dialog {
	position: fixed;
	z-index: 5;
	top: 10%;
	left: 0;
	right: 0;
	width: 100%;
	max-width: 280px;
	max-height: 70%;
	margin: auto;
	padding: 12px 24px;
	border-radius: 10px;
	background-color: var(--c-5);
	overflow: scroll;
	box-shadow: 4px 4px 10px 4px var(--c-1);
}

#fxlist .lstI.sticky,
#pallist .lstI.sticky {
	top: var(--sti);
}

/* list item content */
.lstIcontent {
	padding: 9px 0 7px;
	position: relative;
}

/* list item name (for sorting) */
.lstIname {
	white-space: nowrap;
	text-overflow: ellipsis;
	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
	filter: grayscale(100%);
}

/* list item palette preview */
.lstIprev {
	width: 100%;
	height: 6px;
	position: absolute;
	bottom: 0;
	left: 0;
	z-index: -1;
}

/* find/search element */
.fnd {
	position: relative;
}

.fnd input[type="text"] {
	display: block;
	width: 100%;
	box-sizing: border-box;
	padding: 8px 40px 8px 44px;
	margin: 5px auto 0;
	text-align: left;
	border-radius: 21px;
	background: var(--c-2);
	border: 1px solid var(--c-3);
	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
	filter: grayscale(100%);
}

.fnd input[type="text"]:focus {
	background-color: var(--c-4);
}

.fnd input[type="text"]:not(:placeholder-shown),
.fnd input[type="text"]:hover {
	background-color: var(--c-3);
}

/* segment & preset inner/expanded content */
.segin,
.presin {
	padding: 8px;
	position: relative;
}

.btn-s,
.btn-n {
	border: 1px solid var(--c-2);
	background-color: var(--c-2);
}
.modal .btn:hover,
.segin .btn:hover {
	border: 1px solid var(--c-5) /*!important*/;
	background-color: var(--c-5) /*!important*/;
}

/* hidden list items, must be after .expanded */
.pres .lstIcontent, .segin {
	display: none;
}

.check input:checked ~ .checkmark:after,
.radio input:checked ~ .radiomark:after,
.show,
.expanded .edit-icon,
.expanded .segin, .expanded .presin, .expanded .sbs,
.expanded {
	display: inline-block !important;
}
.hide, .expanded .segin.hide, .expanded .presin.hide, .expanded .sbs.hide, .expanded .frz, .expanded .g-icon {
	display: none !important;
}

.m6 {
	margin: 6px 0;
}

.c {
	text-align: center;
}

.po2 {
	display: none;
	margin-top: 8px;
}

.pwarn {
	color: red;
}

/* horizontal divider (playlist entries) */
.hrz {
	width: auto;
	height: 2px;
	background-color: var(--c-b);
	margin: 3px 0;
}

::-webkit-scrollbar {
	width: 6px;
}
::-webkit-scrollbar-track {
	background: transparent;
}
::-webkit-scrollbar-thumb {
	background: var(--c-sb);
	opacity: .2;
	border-radius: 5px;
}
::-webkit-scrollbar-thumb:hover {
	background: var(--c-sbh);
}

@media not all and (hover: none) {
	.sliderwrap:hover + output.sliderbubble {
		visibility: visible;
		opacity: 1;
	}
}

@media all and (max-width: 1023px) {
	.top button {
		width: 8%;
		padding: 10px 0 8px 0;
	}
	#buttonPcm {
		display: none;
	}
}

@media all and (max-width: 335px) {
	.sliderbubble {
		display: none;
  	}
}

@media all and (max-width: 550px) and (min-width: 374px) {
	#info table .btn, #nodes table .btn {
		width: 200px;
	}
	#info .infobtn, #nodes .infobtn {
		width: 145px;
	}
	#info div, #nodes div {
		max-width: 320px;
	}
}

@media all and (max-width: 420px) {
	#buttonNodes {
		display: none;
	}
}
/* ... */

